--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,6 @@ install:
 
 script:
 - cd $GOPATH/src/github.com/KPI-Labs/design-lab-2/build
-- sudo chmod +x my-bood-initial
-- ./my-bood-initial
-- mv -f my-build.bood build.bood 
-- ./out/bin/bood 
-- cat out/bin/test.txt 
+- sudo chmod +x init-bood
+- ./init-bood
 - ./out/bin/bood 
