--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ script:
 - cd $GOPATH/src/github.com/KPI-Labs/design-lab-2/build
 - sudo chmod +x init-bood
 - ./init-bood
+- mv -f build-copy.bood build.bood
 - ./out/bin/bood 
