--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 
 script:
 - cd $GOPATH/src/github.com/KPI-Labs/design-lab-2/build
-- sudo chmod +x init-bood
-- ./init-bood
+- sudo chmod +x init-bood2
+- ./init-bood2
 - mv -f build-copy.bood build.bood
 - ./out/bin/bood 
